transform to .py file

--- a/IS597 Health and death.ipynb
+++ b/IS597 Health and death.ipynb
@@ -248,6 +248,9 @@
     "    \"\"\"\n",
     "    :param HealthOutcomeData: data set of health outcome data: Under5_Mortality, LifeExpectancy\n",
     "    :return:\n",
+    "\n",
+    "    >>>\n",
+    "\n",
     "    \"\"\"\n",
     "    b = HealthOutcomeData[(HealthOutcomeData['Dim1'] == 'BTSX') & (HealthOutcomeData['SpatialDimType'] == 'REGION')][['TimeDim','NumericValue','SpatialDim']]\n",
     "    a = b[b['SpatialDim'] != 'GLOBAL'] # no global value\n",
@@ -1644,6 +1647,30 @@
     "print(effectOfexp2015after(MaternalMortality_clean,'MaternalMortalityRatio','North America'))\n",
     "print(effectOfexp2015after(MaternalMortality_clean,'MaternalMortalityRatio','South Asia'))\n",
     "print(effectOfexp2015after(MaternalMortality_clean,'MaternalMortalityRatio','East Asia & Pacific'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "          Country                 Region CountryCode  Year incomeGroup  \\\n10    Afghanistan             South Asia         AFG  2010           L   \n15    Afghanistan             South Asia         AFG  2015           L   \n19    Afghanistan             South Asia         AFG  2019           L   \n20        Albania  Europe & Central Asia         ALB  2000          LM   \n30        Albania  Europe & Central Asia         ALB  2010          UM   \n...           ...                    ...         ...   ...         ...   \n3255       Zambia     Sub-Saharan Africa         ZMB  2015          LM   \n3259       Zambia     Sub-Saharan Africa         ZMB  2019          LM   \n3270     Zimbabwe     Sub-Saharan Africa         ZWE  2010           L   \n3275     Zimbabwe     Sub-Saharan Africa         ZWE  2015           L   \n3279     Zimbabwe     Sub-Saharan Africa         ZWE  2019          LM   \n\n        che_gdp  LifeExpectancy_BTSX  \n10     8.569672             59.94055  \n15    10.105348             61.65429  \n19    13.242202             63.20990  \n20     7.233370             73.54528  \n30     4.745796             76.24688  \n...         ...                  ...  \n3255   4.435102             60.49665  \n3259   5.312203             62.45290  \n3270  10.475839             51.49335  \n3275   7.452066             58.47603  \n3279   7.703565             60.68252  \n\n[612 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Country</th>\n      <th>Region</th>\n      <th>CountryCode</th>\n      <th>Year</th>\n      <th>incomeGroup</th>\n      <th>che_gdp</th>\n      <th>LifeExpectancy_BTSX</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>10</th>\n      <td>Afghanistan</td>\n      <td>South Asia</td>\n      <td>AFG</td>\n      <td>2010</td>\n      <td>L</td>\n      <td>8.569672</td>\n      <td>59.94055</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Afghanistan</td>\n      <td>South Asia</td>\n      <td>AFG</td>\n      <td>2015</td>\n      <td>L</td>\n      <td>10.105348</td>\n      <td>61.65429</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>Afghanistan</td>\n      <td>South Asia</td>\n      <td>AFG</td>\n      <td>2019</td>\n      <td>L</td>\n      <td>13.242202</td>\n      <td>63.20990</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>Albania</td>\n      <td>Europe &amp; Central Asia</td>\n      <td>ALB</td>\n      <td>2000</td>\n      <td>LM</td>\n      <td>7.233370</td>\n      <td>73.54528</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>Albania</td>\n      <td>Europe &amp; Central Asia</td>\n      <td>ALB</td>\n      <td>2010</td>\n      <td>UM</td>\n      <td>4.745796</td>\n      <td>76.24688</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3255</th>\n      <td>Zambia</td>\n      <td>Sub-Saharan Africa</td>\n      <td>ZMB</td>\n      <td>2015</td>\n      <td>LM</td>\n      <td>4.435102</td>\n      <td>60.49665</td>\n    </tr>\n    <tr>\n      <th>3259</th>\n      <td>Zambia</td>\n      <td>Sub-Saharan Africa</td>\n      <td>ZMB</td>\n      <td>2019</td>\n      <td>LM</td>\n      <td>5.312203</td>\n      <td>62.45290</td>\n    </tr>\n    <tr>\n      <th>3270</th>\n      <td>Zimbabwe</td>\n      <td>Sub-Saharan Africa</td>\n      <td>ZWE</td>\n      <td>2010</td>\n      <td>L</td>\n      <td>10.475839</td>\n      <td>51.49335</td>\n    </tr>\n    <tr>\n      <th>3275</th>\n      <td>Zimbabwe</td>\n      <td>Sub-Saharan Africa</td>\n      <td>ZWE</td>\n      <td>2015</td>\n      <td>L</td>\n      <td>7.452066</td>\n      <td>58.47603</td>\n    </tr>\n    <tr>\n      <th>3279</th>\n      <td>Zimbabwe</td>\n      <td>Sub-Saharan Africa</td>\n      <td>ZWE</td>\n      <td>2019</td>\n      <td>LM</td>\n      <td>7.703565</td>\n      <td>60.68252</td>\n    </tr>\n  </tbody>\n</table>\n<p>612 rows × 7 columns</p>\n</div>"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lifeExp_clean\n"
    ],
    "metadata": {
     "collapsed": false,
