--- a/two original code/H2healthExp.ipynb
+++ b/two original code/H2healthExp.ipynb
@@ -295,8 +295,12 @@
    "execution_count": 216,
    "outputs": [],
    "source": [
-    "# 'MDG_0000000026':'MaternalMortalityRatio': this column does not apply to SEX\n",
     "def formatWithoutSex(df):\n",
+    "    \"\"\"\n",
+    "    'MDG_0000000026':'MaternalMortalityRatio': this column does not apply to SEX\n",
+    "    :param df: MaternalMortalityRatio data set\n",
+    "    :return: reformatted data set\n",
+    "    \"\"\"\n",
     "    df = df[df['SpatialDimType'] == 'COUNTRY']\n",
     "    df = df[['SpatialDim','TimeDim','NumericValue']]\n",
     "    df = df.rename(columns={\"SpatialDim\":\"countrycode\", \"TimeDim\":\"year\", \"NumericValue\": 'MaternalMortalityRatio'})\n",
@@ -328,8 +332,6 @@
    ],
    "source": [
     "# the average of Maternal Mortality Ratio over the world was decreasing over time\n",
-    "\n",
-    "# MaternalMortalityRatio: definition\n",
     "plt.figure(figsize=(16,8))\n",
     "MaternalMortalityRatio = MaternalMortalityRatio.sort_values('year')\n",
     "sns.lineplot(data=MaternalMortalityRatio, x=\"year\", sort=False,y=\"MaternalMortalityRatio\")\n",
