--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -711,7 +711,10 @@
     "##### Effect of Health Expenditure on Selected Health Outcomes"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
