add markdown cell

--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -308,8 +308,8 @@
     "## The trend of death rate in four income group.\n",
     "**The death rate has declined in the low income group, so this might be one reason to led the global reduction.**\n",
     "**Other findings:**\n",
-    "**1.In low income countries, two peaks appeared around 2007 and 2014.**\n",
-    "**2.In upper middle countries, a peak appeared around 2004.**"
+    "1.In low income countries, two peaks appeared around 2007 and 2014.\n",
+    "2.In upper middle countries, a peak appeared around 2004."
    ],
    "metadata": {
     "collapsed": false
@@ -390,7 +390,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Different pattern of cause-of-death type in different income group"
+    "## Different pattern of cause-of-death type in different income group\n",
+    "Except the Low income countries, non-communicable disease is the most killer, but in the Low income countries, the communicable disease is the leading cause of death.\n",
+    "**So in the article, it is true to say communicable diseases remain an important cause of death in low income countries in 2004.**\n"
    ],
    "metadata": {
     "collapsed": false
@@ -732,7 +734,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Hypothesis 2 block:"
+    "# Hypothesis 2 block:       "
    ],
    "metadata": {
     "collapsed": false
