--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -512,7 +512,8 @@
    "source": [
     "## Global leading cause-of-death disease in 2004\n",
     "Comparing top 10 leading cause-of-death diseases with the article, we have the same disease in the Top 10, the difference only shows in the ranking.\n",
-    "So the conclusion from paper 1 was correct: Cardiovascular diseases are the leading cause of death in the world, then the Infectious disease, and then the cancer (in 2004).\n",
+    "\n",
+    "**So the conclusion from paper 1 was correct: Cardiovascular diseases are the leading cause of death in the world, then the Infectious disease, and then the cancer (in 2004).**\n",
     "\n"
    ],
    "metadata": {
@@ -567,7 +568,7 @@
     "\n",
     "1.IHD and stroke were the leading causes of death in high-income countries, and also in the top five causes in low-income countries.\n",
     "2.In low-income countries, the main causes are neonatal and infectious disease\n",
-    "### So, there are major differences in the ranking of causes between high- and low-income countries\n"
+    "**So, there are major differences in the ranking of causes between high- and low-income countries**\n"
    ],
    "metadata": {
     "collapsed": false
