--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -306,10 +306,10 @@
    "cell_type": "markdown",
    "source": [
     "## The trend of death rate in four income group.\n",
-    "**The death rate has declined in the low income group, so this might be one reason to led the global reduction.**\n",
-    "**Other findings:**\n",
-    "1.In low income countries, two peaks appeared around 2007 and 2014.\n",
-    "2.In upper middle countries, a peak appeared around 2004."
+    "**The death rate has declined in the low income group, so this might be one reason to led the global reduction.**<br/>\n",
+    "**Other findings:**<br/>\n",
+    "1.In low income countries, two peaks appeared around 2007 and 2014.<br/>\n",
+    "2.In upper middle countries, a peak appeared around 2004.<br/>"
    ],
    "metadata": {
     "collapsed": false
