add markdown cell yyy

--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "source": [
     "## Different pattern of cause-of-death type in different income group\n",
-    "Except the Low income countries, non-communicable disease is the most killer, but in the Low income countries, the communicable disease is the leading cause of death.\n",
+    "Except the Low income countries, non-communicable disease is the most killer, but in the Low income countries, the communicable disease is the leading cause of death.<br/>\n",
     "**So in the article, it is true to say communicable diseases remain an important cause of death in low income countries in 2004.**\n"
    ],
    "metadata": {
@@ -435,13 +435,13 @@
    "cell_type": "markdown",
    "source": [
     "## How the mortality type changed in different income group?\n",
-    "**A: the proportion are changing all the time**\n",
-    "## Growing importance of noncommunicable diseases in most low- and middle-income countries since 2004?\n",
-    "**A: Incorrect**\n",
-    "1.Low countries: communicable mortality rate siginificantly decreased. The portion of noncommunicable is getting higher.\n",
-    "2.Lower middle countries: Years after 2004, the trend was the opposite.\n",
-    "3.Upper middle countries:2004-2010, non-communicable are getting less, after that , the portion keep the same level.\n",
-    "4.High income countries are more powerful to withstand the coming pandemic.\n",
+    "**A: the proportion are changing all the time**<br/>\n",
+    "## Growing importance of noncommunicable diseases in most low- and middle-income countries since 2004?<br/>\n",
+    "**A: Incorrect**<br/>\n",
+    "1.Low countries: communicable mortality rate siginificantly decreased. The portion of noncommunicable is getting higher.<br/>\n",
+    "2.Lower middle countries: Years after 2004, the trend was the opposite.<br/>\n",
+    "3.Upper middle countries:2004-2010, non-communicable are getting less, after that , the portion keep the same level.<br/>\n",
+    "4.High income countries are more powerful to withstand the coming pandemic.<br/>\n",
     "\n"
    ],
    "metadata": {
@@ -511,9 +511,9 @@
    "cell_type": "markdown",
    "source": [
     "## Global leading cause-of-death disease in 2004\n",
-    "Comparing top 10 leading cause-of-death diseases with the article, we have the same disease in the Top 10, the difference only shows in the ranking.\n",
+    "Comparing top 10 leading cause-of-death diseases with the article, we have the same disease in the Top 10, the difference only shows in the ranking.<br/>\n",
     "\n",
-    "**So the conclusion from paper 1 was correct: Cardiovascular diseases are the leading cause of death in the world, then the Infectious disease, and then the cancer (in 2004).**\n",
+    "**So the conclusion from paper 1 was correct: Cardiovascular diseases are the leading cause of death in the world, then the Infectious disease, and then the cancer (in 2004).**<br/>\n",
     "\n"
    ],
    "metadata": {
@@ -566,9 +566,9 @@
    "source": [
     "### Compare leading disease between High and Low income group in 2004\n",
     "\n",
-    "1.IHD and stroke were the leading causes of death in high-income countries, and also in the top five causes in low-income countries.\n",
-    "2.In low-income countries, the main causes are neonatal and infectious disease\n",
-    "**So, there are major differences in the ranking of causes between high- and low-income countries**\n"
+    "1.IHD and stroke were the leading causes of death in high-income countries, and also in the top five causes in low-income countries.<br/>\n",
+    "2.In low-income countries, the main causes are neonatal and infectious disease<br/>\n",
+    "**So, there are major differences in the ranking of causes between high- and low-income countries**<br/>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -627,11 +627,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Try to find the reasons led to the two surges of non-communicable disease in Low income countries in 2007,2014.\n",
+    "Try to find the reasons led to the two surges of non-communicable disease in Low income countries in 2007,2014.<br/>\n",
     "### The trend of Leading communicable mortality diseases in Low income countries\n",
-    "From the line chart:\n",
-    "**1.The first surge mainly caused by the increasing HIV.**\n",
-    "**2.The increasing of Neonatal conditions, lower respiratory infections, diarrhoeal disease and the Measles contributed to the second peak.**\n"
+    "From the line chart:<br/>\n",
+    "**1.The first surge mainly caused by the increasing HIV.**<br/>\n",
+    "**2.The increasing of Neonatal conditions, lower respiratory infections, diarrhoeal disease and the Measles contributed to the second peak.**<br/>\n"
    ],
    "metadata": {
     "collapsed": false
@@ -683,9 +683,9 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "Try to find the reason led to the surge of non-communicable disease in upper middle countries in 2005.\n",
-    "### The trend of Leading non-communicable mortality diseases(2005) in Upper-middle income countries\n",
-    "**From the line chart, the surge caused by increasing IHD and Stroke.**\n"
+    "Try to find the reason led to the surge of non-communicable disease in upper middle countries in 2005.<br/>\n",
+    "### The trend of Leading non-communicable mortality diseases(2005) in Upper-middle income countries<br/>\n",
+    "**From the line chart, the surge caused by increasing IHD and Stroke.**<br/>\n"
    ],
    "metadata": {
     "collapsed": false
