add markdown cell msf

--- a/analysis_visualization.ipynb
+++ b/analysis_visualization.ipynb
@@ -772,6 +772,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Hypothesis 2\n",
+    "## finding: the life expectancy is increasing over years"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "outputs": [
@@ -787,8 +797,7 @@
     }
    ],
    "source": [
-    "# Hypothesis 2\n",
-    "# finding: the life expectancy is increasing over years\n",
+    "\n",
     "functions.lineplot_time(LifeExpectancy_1)"
    ],
    "metadata": {
@@ -796,6 +805,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## finding: the Under5_Mortality is decreasing over years"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -812,7 +830,7 @@
     }
    ],
    "source": [
-    "# finding: the Under5_Mortality is decreasing over years\n",
+    "\n",
     "functions.lineplot_time(Under5_Mortality_1)"
    ],
    "metadata": {
@@ -820,6 +838,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## finding: the average of Maternal Mortality Ratio over the world was decreasing over time"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -836,7 +863,7 @@
     }
    ],
    "source": [
-    "# finding: the average of Maternal Mortality Ratio over the world was decreasing over time\n",
+    "\n",
     "plt.figure(figsize=(16, 8))\n",
     "MaternalMortalityRatio = MaternalMortalityRatio.sort_values('year')\n",
     "sns.lineplot(data=MaternalMortalityRatio, x=\"year\", sort=False, y=\"MaternalMortalityRatio\")\n",
@@ -848,6 +875,16 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## All data includes health expendure, three factors, year, incomegroup, and region for each country  <br/>\n",
+    "**anova table shows that all three factors were related to health expenditure, of which the region has the most significant correlation**<br/>"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -865,8 +902,7 @@
     }
    ],
    "source": [
-    "# all data includes health expendure, three factors, year, incomegroup, and region for each country\n",
-    "# anova table shows that all three factors were related to health expenditure, of which the region has the most significant correlation\n",
+    "\n",
     "# Ordinary Least Squares (OLS) model\n",
     "model = ols('che_gdp ~ Year+incomeGroup+Region',\n",
     "            data=InfoAll.astype({\"Year\": str})).fit()\n",
@@ -878,6 +914,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## correlation between independent Year and dependent var = che_gdp in Year 2019"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -894,7 +939,7 @@
     }
    ],
    "source": [
-    "# correlation between independent Year and dependent var = che_gdp in Year 2019\n",
+    "\n",
     "yearexp = InfoAll[['che_gdp', 'Year']].dropna()\n",
     "pearsonr(yearexp['che_gdp'], yearexp['Year'].astype({\"Year\": int}))"
    ],
@@ -908,7 +953,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Effect of Health Expenditure on Selected Health Outcomes"
+    "##### Effect of Health Expenditure on Selected Health Outcomes\n",
+    "##### health expenditure per region per year"
    ],
    "metadata": {
     "collapsed": false,
@@ -948,7 +994,7 @@
     }
    ],
    "source": [
-    "# health expenditure per region per year\n",
+    "\n",
     "InfoAll2015_ = InfoAll.loc[(InfoAll[\"Year\"] == 2015) | (InfoAll[\"Year\"] == 2016) | (InfoAll[\"Year\"] == 2017) | (\n",
     "        InfoAll[\"Year\"] == 2018) | (InfoAll[\"Year\"] == 2019)]\n",
     "d = InfoAll2015_[['Region', 'Year', 'che_gdp']]\n",
@@ -961,6 +1007,17 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### generate a boxplot to see the health expenditure distribution by income groups. Using boxplot, we can easily\n",
+    "### detect the differences between income groups\n",
+    "**CAN is only country in North America**"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -977,9 +1034,7 @@
     }
    ],
    "source": [
-    "# generate a boxplot to see the health expenditure distribution by income groups. Using boxplot, we can easily\n",
-    "# detect the differences between income groups\n",
-    "# CAN is only country in North America\n",
+    "\n",
     "plt.figure(figsize=(16, 8))\n",
     "ax = sns.boxplot(x='Region', y='che_gdp', data=InfoAll[InfoAll['Year'] == 2019], color='#99c2a2')\n",
     "ax = sns.swarmplot(x=\"Region\", y=\"che_gdp\", data=InfoAll[InfoAll['Year'] == 2019], color=\".2\")\n",
@@ -1025,6 +1080,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Aligned with previous finding that in Sub-Saharan Africa Under5_Mortality in both sex decreased with health expenditure increased"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "outputs": [
@@ -1043,7 +1107,7 @@
     }
    ],
    "source": [
-    "# aligned with previous finding that in Sub-Saharan Africa Under5_Mortality in both sex decreased with health expenditure increased\n",
+    "\n",
     "print(functions.effectOfexp2015before(Under5_clean, 'Under5_Mortality_BTSX', 'Sub-Saharan Africa'))\n",
     "print(functions.effectOfexp2015before(Under5_clean, 'Under5_Mortality_BTSX', 'Latin America & Caribbean'))  #\n",
     "print(functions.effectOfexp2015before(Under5_clean, 'Under5_Mortality_BTSX', 'Europe & Central Asia'))  #\n",
@@ -1057,6 +1121,16 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Except for Sub-Saharan Africa and South Asia, the life expectancy increased with every increase in health expenditure\n",
+    "### After 2015, in Middle East & North Africa, with every one percent increase in health expenditure over total GDP, results in 0.42 percent decrease in the Under5_Mortality rate despite of sex"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -1078,8 +1152,7 @@
     }
    ],
    "source": [
-    "# except for Sub-Saharan Africa and South Asia, the life expectancy increased with every increase in health expenditure\n",
-    "# after 2015, in Middle East & North Africa, with every one percent increase in health expenditure over total GDP, results in 0.42 percent decrease in the Under5_Mortality rate despite of sex\n",
+    "\n",
     "print(functions.effectOfexp2015after(Under5_clean, 'Under5_Mortality_BTSX', 'Sub-Saharan Africa'))\n",
     "print(functions.effectOfexp2015after(Under5_clean, 'Under5_Mortality_BTSX', 'Latin America & Caribbean'))\n",
     "print(functions.effectOfexp2015after(Under5_clean, 'Under5_Mortality_BTSX', 'Europe & Central Asia'))\n",
@@ -1093,6 +1166,18 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Only one country in north america, the relationship is weird**<br/>\n",
+    "**Conclusion from regional paper: year: before 2015 in Sub-Saharan Africa, 1 percent increase in health expenditure per capita improve life expectancy by 0.06 percent.**<br/>\n",
+    "**Our finding: after 2015, except for Sub-Saharan Africa and South Asia, the life expectancy increased with every increase in health expenditure**<br/>\n",
+    "**In Latin America & Caribbean, with every one percent increase in health expenditure over total GDP, results in 0.42 years increase in life expectancy**<br/>"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -1114,10 +1199,7 @@
     }
    ],
    "source": [
-    "# only one country in north america, the relationship is weird\n",
-    "# conclusion from regional paper: year: before 2015 in Sub-Saharan Africa, 1 percent increase in health expenditure per capita improve life expectancy by 0.06 percent.\n",
-    "# our finding: after 2015, except for Sub-Saharan Africa and South Asia, the life expectancy increased with every increase in health expenditure\n",
-    "# in Latin America & Caribbean, with every one percent increase in health expenditure over total GDP, results in 0.42 years increase in life expectancy\n",
+    "\n",
     "print(functions.effectOfexp2015after(lifeExp_clean, 'LifeExpectancy_BTSX', 'Sub-Saharan Africa'))\n",
     "print(functions.effectOfexp2015after(lifeExp_clean, 'LifeExpectancy_BTSX', 'Latin America & Caribbean'))\n",
     "print(functions.effectOfexp2015after(lifeExp_clean, 'LifeExpectancy_BTSX', 'Europe & Central Asia'))\n",
@@ -1131,6 +1213,17 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**maternal mortality rate for each region and its correlation with the increase/decrease in health expenditure**<br/>\n",
+    "**except for Sub-Saharan Africa and South Asia, the mortality rate decreased with every increase in health expenditure**<br/>\n",
+    "**in Latin America & Caribbean, with every one percent increase in health expenditure over total GDP, results in 0.35 percent decrease in the mortality rate**<br/>"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -1152,9 +1245,7 @@
     }
    ],
    "source": [
-    "# maternal mortality rate for each region and its correlation with the increase/decrease in health expenditure\n",
-    "# except for Sub-Saharan Africa and South Asia, the mortality rate decreased with every increase in health expenditure\n",
-    "# in Latin America & Caribbean, with every one percent increase in health expenditure over total GDP, results in 0.35 percent decrease in the mortality rate\n",
+    "\n",
     "print(functions.effectOfexp2015after(MaternalMortality_clean, 'MaternalMortalityRatio', 'Sub-Saharan Africa'))\n",
     "print(functions.effectOfexp2015after(MaternalMortality_clean, 'MaternalMortalityRatio', 'Latin America & Caribbean'))\n",
     "print(functions.effectOfexp2015after(MaternalMortality_clean, 'MaternalMortalityRatio', 'Europe & Central Asia'))\n",
